# kkim_cme

./: .editorconfig  .vcsinstall  README.md  bootstrap_ws.sh  enforce_style.sh  test_doors.sh  test_rooms.sh  todo.md
cme/: CMakeLists.txt  package.xml
cme_control/: .gitignore  CMakeLists.txt  package.xml
cme_control/action/: NavigateRoom.action  RotateInPlace.action  TurnOnLight.action
cme_control/launch/: cme_services.launch
cme_control/msg/: CMEState.msg
cme_control/scripts/: common.py  door_marker.py  door_service.py  light_marker.py  light_service.py  path_markers.py  room_marker.py
cme_control/srv/: DoorOpen.srv
cme_description/: CMakeLists.txt  cleanup_urdf.sh  package.xml
cme_description/robots/: husky.urdf.xacro  jackal.urdf.xacro  panda.urdf.xacro
cme_description/urdf/: bim_door_h.urdf.xacro  bim_door_v.urdf.xacro  cme.urdf.xacro  complete_model.urdf.xacro  complete_mp_model.urdf.xacro  complete_mp_model_wider.urdf.xacro  debug.xacro.xml  door.urdf .original.xacro  door.xacro.xml  gazebo.xacro.xml  light_switch.xacro.xml  mp_model.urdf.xacro  mp_model_doors.urdf.xacro
cme_docs/: CMakeLists.txt  package.xml
cme_docs/docs/: gazebo.md  setup.md  (+4 more)
cme_gazebo/: CMakeLists.txt  package.xml
cme_gazebo/controller/: controllers.yaml  door_controller.yaml
cme_gazebo/launch/: gazebo.launch  test_gazebo.launch
cme_gazebo/launch/include/: controller_utils.launch.xml
cme_gazebo/models/complete_mp_model/: model.config  model.sdf
cme_gazebo/worlds/: cme.world
cme_launch/: CMakeLists.txt  package.xml
cme_navigation/: CMakeLists.txt  package.xml
(+102 files in other folders)
