<?xml version="1.0"?>
<package format="2">
	<name>cme_gazebo</name>
	<version>0.0.0</version>
	<description>The cme_gazebo package</description>

	<maintainer email="turtlebot@todo.todo">turtlebot</maintainer>

	<license>TODO</license>

	<buildtool_depend>catkin</buildtool_depend>
	<depend>gazebo_ros</depend>

	<export>
		<gazebo_ros gazebo_media_path="${prefix}" />
		<gazebo_ros gazebo_model_path="${prefix}/models" />
		<gazebo_ros gazebo_resources_path="${prefix}" />
	</export>
</package>
